feature - only valided entities are added to the crm datastore. The audit log provides a trail of the operations and success status